# polybot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.claude/skills/: polybot.md
.github/workflows/: ci.yml  docs.yml  publish.yml
config/mappings/: crypto_assets.yaml  event_patterns.yaml
deploy/prometheus/: prometheus.yml
docs/: ai-plugin-guide.md  api-reference.md  architecture.md  configuration.md  deployment.md  roadmap.md  strategies.md
documentation/: mkdocs.yml
documentation/docs/: comparison.md  faq.md  index.md
documentation/docs/deployment/: docker.md  index.md  monitoring.md  security.md
documentation/docs/developer-guide/: architecture.md  contributing.md  index.md  mcp-server.md
documentation/docs/getting-started/: configuration.md  first-trade.md  index.md  installation.md  quickstart.md
documentation/docs/user-guide/: ai-agents.md  claude-code-skill.md  cli-reference.md  dashboard.md  index.md  risk-management.md  shadow-mode.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  router.js
frontend/src/api/: client.js  websocket.js
frontend/src/assets/: main.css
frontend/src/components/: AlertBanner.vue  AnalyticsCharts.vue  MarketList.vue  OrderBook.vue  PositionTable.vue  SettingsPanel.vue  StrategyCard.vue  TradeHistory.vue
frontend/src/stores/: main.js  websocket.js
frontend/src/views/: Analytics.vue  Home.vue  Markets.vue  Positions.vue  Settings.vue  Shadow.vue  Strategies.vue  StrategyLogs.vue
src/polybot/: __init__.py  cli.py  config.py
src/polybot/api/: __init__.py  app.py  auth.py  health.py  metrics.py  middleware.py  schemas.py  websocket.py
src/polybot/core/: __init__.py  auth.py  client.py  nng.py  perplexity_client.py  rate_limiter.py  shadow_tracker.py  websocket.py
src/polybot/db/: __init__.py  analytics_client.py  analytics_store.py  duckdb_store.py  executor_client.py  sqlite_store.py  state_client.py  state_store.py  strategy_logs_client.py  strategy_logs_store.py  strategy_runner_client.py
src/polybot/exchanges/: __init__.py  base.py
src/polybot/mappings/: __init__.py  models.py  pattern_matcher.py  service.py  store.py
src/polybot/mcp/: __init__.py  approval.py  audit.py  handlers.py  server.py  tools.py
src/polybot/models/: __init__.py  market.py  messages.py  order.py  position.py  trade.py
src/polybot/plugins/: __init__.py  base.py  example_plugin.py  llm_plugin.py  perplexity_plugin.py
src/polybot/risk/: __init__.py  exposure.py  hedge.py  manager.py  models.py  portfolio.py
src/polybot/services/: __init__.py  analytics.py  api_service.py  base.py  executor.py  manager.py  scanner.py  state.py  strategy_logs.py  strategy_runner.py
src/polybot/strategies/: __init__.py  ai_model.py  arbitrage.py  base.py  calendar_spread.py  copy_trade.py  momentum.py  poll_divergence.py  resolution_arb.py  spread_farm.py  stat_arb.py  volume_spike.py
src/polybot/ui/: __init__.py
tests/: conftest.py
tests/api/: conftest.py  test_health.py
tests/unit/: __init__.py
(+42 files in other folders)
