[project]
name = "polybot-trader"
version = "0.1.0"
description = "Open-source automated trading system for prediction markets - Polymarket, Kalshi, and more"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Dipankar Sarkar", email = "me@dipankar.name" },
    { name = "Cryptuon Team" }
]
maintainers = [
    { name = "Dipankar Sarkar", email = "me@dipankar.name" }
]
keywords = [
    "trading-bot",
    "prediction-markets",
    "polymarket",
    "kalshi",
    "algorithmic-trading",
    "automated-trading",
    "market-making",
    "arbitrage",
    "copy-trading",
    "quantitative-trading",
    "defi",
    "crypto-trading",
    "ai-trading",
    "event-contracts"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "web3>=6.0",
    "eth-account>=0.11",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "duckdb>=0.10",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "pynng>=0.8",
    "msgpack>=1.0",
    "click>=8.1",
    "rich>=13.0",
    "numpy>=1.26",
    "py-clob-client>=0.34.1",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.8",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/cryptuon/polybot"
Documentation = "https://docs.cryptuon.com/polybot"
Repository = "https://github.com/cryptuon/polybot"
Issues = "https://github.com/cryptuon/polybot/issues"
Changelog = "https://github.com/cryptuon/polybot/blob/main/CHANGELOG.md"

[project.scripts]
polybot = "polybot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polybot"]
artifacts = ["src/polybot/ui/dist/**"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/frontend",
    "/tests",
    "/documentation",
]
exclude = [
    "/.venv",
    "/data",
    "*.pyc",
    "__pycache__",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
